Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .safe-area {
   height: calc(100vh - env(safe-area-inset-bottom, 0));
-  padding-bottom: env(safe-area-inset-bottom, 0);
+  padding-bottom: calc(env(safe-area-inset-bottom, 0) / 2);
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
